root access optimal